syntax = "proto3";

// use {app_id}.{version} as package name
package bilibili.app.wall.v1;

// specify golang package name
option go_package = "v1";

service Wall {
    // 获取免流规则信息
    rpc RuleInfo(RuleRequest) returns (RulesReply);
}

message RuleRequest {}

message RulesReply {
    map<string, RulesInfo> RulesInfo = 1;
    // RulesInfo的哈希值
    string HashValue = 2;
}

message RulesInfo {
    repeated RuleInfo RulesInfo = 1;
}

message RuleInfo {
    // "tf"：traffic free缩写，表示是否免流
    bool tf = 1;
    // "m": 表示操作模式,
    // break：表示无操作，
    // replace：表示用"a"的操作参数，替换原有URL中的host，
    // proxy：表示用"a"的操作参数为host，将原有URL作为query参数（具体转换见示例）
    string m = 2;
    // "a"：表示操作参数（通常是一个host域名，支持HTTP与HTTPS连接）
    string a = 3;
    // "p"：表示用于匹配的正则表达式；
    string p = 4;
}